--- a/doc2vec-02-topics.ipynb
+++ b/doc2vec-02-topics.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load pre-trained model\n",
-    "model = doc2vec.Doc2Vec.load(MODEL_FILE_DM)  # DM model chosen by default\n",
-    "model.delete_temporary_training_data(keep_doctags_vectors=True, keep_inference=True)  # only keep what we need"
+    "# model = doc2vec.Doc2Vec.load(MODEL_FILE_DM)  # DM model chosen by default\n",
+    "# model.delete_temporary_training_data(keep_doctags_vectors=True, keep_inference=True)  # only keep what we need"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'delete_temporary_training_data' from 'gensim.utils' (c:\\Users\\uSER\\anaconda3\\lib\\site-packages\\gensim\\utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\uSER\\Documents\\GitHub\\doc2vec-workshop\\doc2vec-02-topics.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/uSER/Documents/GitHub/doc2vec-workshop/doc2vec-02-topics.ipynb#X45sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgensim\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m delete_temporary_training_data\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/uSER/Documents/GitHub/doc2vec-workshop/doc2vec-02-topics.ipynb#X45sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m model \u001b[39m=\u001b[39m doc2vec\u001b[39m.\u001b[39mDoc2Vec\u001b[39m.\u001b[39mload(MODEL_FILE_DM)  \u001b[39m# Load pre-trained model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/uSER/Documents/GitHub/doc2vec-workshop/doc2vec-02-topics.ipynb#X45sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Delete temporary training data\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'delete_temporary_training_data' from 'gensim.utils' (c:\\Users\\uSER\\anaconda3\\lib\\site-packages\\gensim\\utils.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.utils import delete_temporary_training_data\n",
+    "\n",
+    "model = doc2vec.Doc2Vec.load(MODEL_FILE_DM)  # Load pre-trained model\n",
+    "\n",
+    "# Delete temporary training data\n",
+    "delete_temporary_training_data(model, keep_doctags_vectors=True, keep_inference=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\uSER\\AppData\\Local\\Temp\\ipykernel_51288\\3892327324.py:9: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+      "  model.docvecs = KeyedVectors(vector_size=model.vector_size)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.models import KeyedVectors\n",
+    "\n",
+    "model = doc2vec.Doc2Vec.load(MODEL_FILE_DM)\n",
+    "\n",
+    "# Getting errors, hence, manually deleting errors\n",
+    "# del model.wv\n",
+    "# del model.dv\n",
+    "# del model.docvecs \n",
+    "model.docvecs = KeyedVectors(vector_size=model.vector_size)"
    ]
   },
   {
@@ -121,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {
     "solution": "shown",
     "solution2": "hidden"
@@ -129,14 +181,16 @@
    "outputs": [],
    "source": [
     "# solution\n",
-    "del model\n",
+    "# del model\n",
     "model_dm = doc2vec.Doc2Vec.load(MODEL_FILE_DM)\n",
     "model_dbow = doc2vec.Doc2Vec.load(MODEL_FILE_DBOW)\n",
     "\n",
-    "docvecs_dm = [model_dm.infer_vector(d, alpha=0.01, steps=1000) for d in docs]\n",
-    "docvecs_dbow = [model_dbow.infer_vector(d, alpha=0.01, steps=1000) for d in docs]\n",
+    "infer_epochs = 1000\n",
     "\n",
-    "docvecs = [docvecs_dm[i] + docvecs_dbow[i] for i, d in enumerate(docs)]"
+    "docvecs_dm = [model_dm.infer_vector(d, alpha=0.01, epochs=infer_epochs) for d in docs]\n",
+    "docvecs_dbow = [model_dbow.infer_vector(d, alpha=0.01, epochs=infer_epochs) for d in docs]\n",
+    "\n",
+    "docvecs = [docvecs_dm[i] + docvecs_dbow[i] for i in range(len(docs))]\n"
    ]
   },
   {
@@ -150,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# infer document vectors\n",
-    "docvecs = [model.infer_vector(d, alpha=0.01, steps=1000) for d in docs]"
+    "docvecs = [model.infer_vector(d, alpha=0.01, epochs=infer_epochs) for d in docs]\n"
    ]
   },
   {
@@ -167,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,35 +239,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0: 27,\n",
-       "         1: 36,\n",
-       "         2: 20,\n",
-       "         3: 100,\n",
-       "         4: 15,\n",
-       "         5: 146,\n",
-       "         6: 45,\n",
-       "         7: 39,\n",
-       "         8: 69,\n",
-       "         9: 6,\n",
-       "         10: 75,\n",
-       "         11: 30,\n",
-       "         12: 86,\n",
-       "         13: 38,\n",
-       "         14: 72,\n",
-       "         15: 47,\n",
-       "         16: 37,\n",
-       "         17: 47,\n",
-       "         18: 28,\n",
-       "         19: 37})"
+       "Counter({14: 52,\n",
+       "         9: 54,\n",
+       "         0: 54,\n",
+       "         16: 55,\n",
+       "         3: 44,\n",
+       "         13: 15,\n",
+       "         6: 66,\n",
+       "         17: 34,\n",
+       "         2: 7,\n",
+       "         18: 53,\n",
+       "         5: 35,\n",
+       "         7: 55,\n",
+       "         10: 51,\n",
+       "         8: 103,\n",
+       "         4: 55,\n",
+       "         19: 45,\n",
+       "         1: 56,\n",
+       "         12: 65,\n",
+       "         15: 43,\n",
+       "         11: 58})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +349,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\uSER\\anaconda3\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:790: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\uSER\\anaconda3\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:982: FutureWarning: The PCA initialization in TSNE will change to have the standard deviation of PC1 equal to 1e-4 in 1.2. This will ensure better convergence.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(1000, 2)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,13 +430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "tsne_plot = bp.figure(plot_width=1600, plot_height=900,\n",
     "                      title=\"Topics\",\n",
-    "                      tools=\"pan,wheel_zoom,box_zoom,reset,hover,previewsave\",\n",
+    "                      tools=\"pan,wheel_zoom,box_zoom,reset,hover\",\n",
     "                      x_axis_type=None, y_axis_type=None, min_border=1)\n",
     "\n",
     "tsne_plot.scatter(x='x', \n",
@@ -414,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
