--- a/doc2vec-01-train.ipynb
+++ b/doc2vec-01-train.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "TaggedDocument(words=['anarchism', 'is', 'a', 'political', 'philosophy', 'that', 'advocates', 'self', 'governed', 'societies', 'with', 'voluntary', 'institutions', 'these', 'are', 'often', 'described', 'as', 'stateless', 'societies', 'but', 'several', 'authors', 'have', 'defined', 'them', 'more', 'specifically', 'as', 'institutions', 'based', 'on', 'non', 'hierarchical', 'free', 'associations', 'anarchism', 'holds', 'the', 'state', 'to', 'be', 'undesirable', 'unnecessary', 'or', 'harmful', 'while', 'anti', 'statism', 'is', 'central', 'anarchism', 'entails', 'opposing', 'authority', 'or', 'hierarchical', 'organisation', 'in', 'the', 'conduct', 'of', 'human', 'relations', 'including', 'but', 'not', 'limited', 'to', 'the', 'state', 'system'], tags=[0])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,13 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train DM model\n",
     "model_dm = doc2vec.Doc2Vec(docs, \n",
-    "                           size=200, # vector size, should be the same size as pre-trained embedding size when not using dm_concat\n",
+    "                           vector_size=200, # vector size, should be the same size as pre-trained embedding size when not using dm_concat\n",
     "                           window=10, # window size for word context, on each side\n",
     "                           min_count=1, # minimum nr. of occurrences of a word\n",
     "                           sample=1e-5, # threshold for undersampling high-frequency words\n",
@@ -133,13 +133,13 @@
     "                           negative=5, # how many words to use for negative sampling\n",
     "                           dbow_words=1, # train word vectors\n",
     "                           dm_concat=1, # concatenate vectors or sum/average them?\n",
-    "                           iter=100 # nr of epochs to train\n",
+    "                           epochs=100 # nr of epochs to train\n",
     "                          )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "solution": "shown",
     "solution2": "hidden",
@@ -177,7 +177,19 @@
    "outputs": [],
    "source": [
     "# train DBOW model\n",
-    "...enter your code here..."
+    "# ...enter your code here...\n",
+    "model_dbow = doc2vec.Doc2Vec(docs, \n",
+    "                            vector_size=200, # vector size, should be the same size as pre-trained embedding size when not using dm_concat\n",
+    "                            window=10, # window size for word context, on each side\n",
+    "                            min_count=1, # minimum nr. of occurrences of a word\n",
+    "                            sample=1e-5, # threshold for undersampling high-frequency words\n",
+    "                            workers=4, # for multicore processing\n",
+    "                            hs=0, # if 1, use hierarchical softmax; if 0, use negative sampling\n",
+    "                            dm=0, # if 1 use PV-DM, if 0 use PM-DBOW\n",
+    "                            negative=5, # how many words to use for negative sampling\n",
+    "                            dbow_words=1, # train word vectors\n",
+    "                            epochs=100 # nr of epochs to train\n",
+    "                            )"
    ]
   },
   {
@@ -213,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,16 +275,30 @@
       "[Original document]\n",
       "[Doc 200]: single scattering albedo is used to define scattering of electromagnetic waves on small particles it depends on properties of the material lrb refractive index rrb the size of the particle or particles and the wavelength of the incoming radiation\n",
       "\n",
-      "[Most similar documents]\n",
+      "[Most similar documents]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\uSER\\AppData\\Local\\Temp\\ipykernel_34220\\2777213050.py:12: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+      "  for doc_id, similarity in model.docvecs.most_similar(ref_doc_id, topn=3):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "-----------------\n",
-      "similarity: 0.8602718114852905\n",
-      "[Doc 154]: terrestrial albedo\n",
+      "similarity: 0.818175196647644\n",
+      "[Doc 165]: the overall albedo of the moon is around but it is strongly directional and non lambertian displaying also a strong opposition effect although such reflectance properties are different from those of any terrestrial terrains they are typical of the regolith surfaces of airless solar system bodies\n",
       "-----------------\n",
-      "similarity: 0.8536304235458374\n",
-      "[Doc 187]: water reflects light very differently from typical terrestrial materials the reflectivity of a water surface is calculated using the fresnel equations lrb see graph rrb\n",
+      "similarity: 0.811142086982727\n",
+      "[Doc 148]: albedo lrb rrb or reflection coefficient derived from latin albedo whiteness lrb or reflected sunlight rrb in turn from albus white is the diffuse reflectivity or reflecting power of a surface\n",
       "-----------------\n",
-      "similarity: 0.8468575477600098\n",
-      "[Doc 148]: albedo lrb rrb or reflection coefficient derived from latin albedo whiteness lrb or reflected sunlight rrb in turn from albus white is the diffuse reflectivity or reflecting power of a surface\n"
+      "similarity: 0.8111039996147156\n",
+      "[Doc 162]: astronomical albedo\n"
      ]
     }
    ],
@@ -289,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,91 +353,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_docvecs = [model_dm.infer_vector(d, alpha=start_alpha, steps=infer_epoch) for d in test_docs]"
+    "# test_docvecs = [model_dm.infer_vector(d, alpha=start_alpha, steps=infer_epoch) for d in test_docs]\n",
+    "\n",
+    "infer_epoch = 20  # Number of inference epochs\n",
+    "\n",
+    "test_docvecs = [model_dm.infer_vector(d, alpha=start_alpha, epochs=infer_epoch) for d in test_docs]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -3.34543269e-03,  -2.02659750e-04,   1.83269521e-03,\n",
-       "        -3.59125179e-03,  -9.58812714e-04,   1.32690510e-03,\n",
-       "         6.83834252e-04,   3.22495471e-03,  -2.63553765e-03,\n",
-       "        -1.47204555e-03,  -4.05679084e-03,   1.71870308e-03,\n",
-       "        -1.93525094e-03,   2.16521672e-03,  -2.87479197e-04,\n",
-       "         3.72954877e-03,  -1.40604109e-03,  -3.12495627e-04,\n",
-       "        -1.19268964e-03,  -4.41035285e-04,  -8.22708884e-04,\n",
-       "        -3.64960084e-04,  -7.37239316e-04,  -1.07299641e-03,\n",
-       "        -2.10524863e-03,   3.84913268e-03,   2.21801433e-03,\n",
-       "        -7.07347237e-04,  -7.95700529e-04,  -3.16595496e-03,\n",
-       "        -1.02289414e-04,   5.83516376e-04,  -2.63492903e-03,\n",
-       "        -1.08312233e-03,  -1.02029741e-03,   3.78575549e-03,\n",
-       "         1.45962683e-03,   2.54141851e-05,   1.38039165e-03,\n",
-       "        -1.80106028e-03,  -1.61020248e-03,   6.55168667e-04,\n",
-       "         3.43498797e-03,   1.07691984e-03,  -5.28099656e-04,\n",
-       "         3.18728294e-03,  -1.71532412e-03,  -1.34388974e-03,\n",
-       "        -1.91890911e-04,   4.45759669e-03,   5.26775490e-04,\n",
-       "         1.25140662e-03,  -1.93653291e-03,   2.66348454e-03,\n",
-       "        -1.74398592e-03,  -7.47502490e-04,  -2.08818447e-03,\n",
-       "         1.15749739e-04,   2.50685937e-03,   1.58320717e-03,\n",
-       "         9.04552697e-04,   1.47760892e-03,  -9.75116971e-04,\n",
-       "         7.03695347e-04,  -3.71996895e-03,  -1.48632549e-04,\n",
-       "         8.99205566e-04,  -3.64923291e-03,  -1.20072870e-03,\n",
-       "         2.57806212e-04,   6.51238079e-05,   1.99532299e-03,\n",
-       "        -3.93685047e-03,   3.49444104e-03,  -2.42813234e-03,\n",
-       "         5.92366559e-04,  -9.96877206e-04,  -4.23693389e-04,\n",
-       "        -2.30978942e-03,   1.67324184e-03,  -4.64464014e-04,\n",
-       "         1.04905246e-03,   8.51455552e-04,   3.84659972e-03,\n",
-       "        -2.16047955e-03,   4.07303072e-04,  -6.47031004e-04,\n",
-       "         4.30193380e-04,  -3.83852189e-03,  -2.41624913e-03,\n",
-       "         4.47777985e-03,   3.73746559e-04,  -1.77153022e-04,\n",
-       "         3.16553749e-03,   1.45281979e-03,  -3.13482923e-03,\n",
-       "        -6.63394050e-04,   2.86626839e-03,   1.16678036e-03,\n",
-       "        -5.87538352e-06,   1.33400341e-03,  -1.19022770e-04,\n",
-       "         1.88449238e-04,  -3.21536325e-04,  -6.26780908e-04,\n",
-       "        -4.63506803e-05,   2.78009498e-03,   1.95933855e-03,\n",
-       "         1.52105966e-03,  -8.61676876e-04,   2.63746042e-04,\n",
-       "         2.58587021e-03,  -3.19621759e-03,  -1.52578403e-03,\n",
-       "         1.96350552e-03,   7.00956385e-04,  -6.19099184e-04,\n",
-       "        -2.24512583e-03,  -1.32673551e-04,   1.73935923e-03,\n",
-       "        -2.15891516e-03,  -2.09864904e-03,   2.26438278e-03,\n",
-       "        -3.06691672e-03,   3.41129460e-04,   3.66919325e-03,\n",
-       "         3.03318119e-03,   2.63566943e-03,  -1.04146078e-03,\n",
-       "         4.45087999e-03,   3.08901625e-04,  -3.19249392e-03,\n",
-       "         3.11900687e-04,   3.38713010e-03,   1.34903286e-03,\n",
-       "        -1.49399776e-03,  -7.62923388e-04,  -5.85624133e-04,\n",
-       "         2.23552063e-03,  -3.42310406e-03,   3.47425113e-04,\n",
-       "        -3.30941053e-04,  -5.56916511e-03,  -1.12819183e-03,\n",
-       "        -7.16306618e-04,  -2.84349918e-03,   4.25079110e-04,\n",
-       "        -4.32323338e-03,   1.38957624e-03,   7.72928703e-04,\n",
-       "         2.32240581e-03,  -6.84116210e-04,  -5.00536116e-04,\n",
-       "         9.23422805e-04,  -3.01561877e-03,  -1.25944513e-04,\n",
-       "         6.60255842e-04,   1.13561482e-03,   1.26384560e-03,\n",
-       "        -9.14116798e-04,  -3.33085004e-03,  -1.31950219e-04,\n",
-       "         2.64760922e-04,   1.68500061e-04,  -1.28612982e-03,\n",
-       "         2.31888611e-03,  -2.73393583e-04,  -1.60417971e-04,\n",
-       "        -2.71645677e-03,   1.55136990e-03,  -1.65851356e-03,\n",
-       "        -2.96527200e-04,  -4.98585403e-03,  -3.39294388e-03,\n",
-       "        -6.21876039e-04,  -2.66665197e-03,   1.36787794e-03,\n",
-       "         1.24920474e-03,   4.51689484e-05,   3.25910019e-04,\n",
-       "         2.23417836e-03,   2.43333098e-03,   3.01448116e-03,\n",
-       "        -9.32812516e-04,  -2.50651524e-03,   2.61605339e-04,\n",
-       "        -6.00697531e-04,   1.21190438e-04,  -3.76869102e-05,\n",
-       "        -3.44622735e-04,   2.35535484e-03,   5.00908413e-04,\n",
-       "         1.01548247e-03,   1.61165954e-03,  -8.98663944e-04,\n",
-       "        -3.02478299e-03,  -5.80622058e-04,  -1.26242603e-03,\n",
-       "        -3.30507901e-05,  -6.38836762e-04], dtype=float32)"
+       "array([ 2.58632842e-03,  3.63510568e-03, -1.21472322e-03, -1.15607830e-03,\n",
+       "        7.26221242e-06,  1.88632961e-03, -1.15984026e-03,  2.83681066e-03,\n",
+       "        2.13623280e-03, -1.63606170e-03,  6.09889627e-04, -9.48709494e-05,\n",
+       "       -2.53189425e-03,  2.51582661e-03, -1.72592211e-03, -4.17035818e-03,\n",
+       "        7.85952667e-04, -7.88370598e-05,  3.83347913e-04, -1.40118389e-03,\n",
+       "        2.93286459e-04,  3.21178860e-03,  1.74682192e-03, -4.14444925e-03,\n",
+       "       -1.47055055e-03, -2.33964832e-03,  1.89658953e-03, -1.56889553e-03,\n",
+       "        1.53461634e-03, -1.19663282e-05, -5.22329099e-03,  2.03342712e-03,\n",
+       "        2.00471375e-03, -8.12001061e-03,  1.19660384e-04, -3.38673429e-03,\n",
+       "        1.12576061e-03, -5.53413620e-03, -4.18214547e-03, -3.31581896e-03,\n",
+       "        1.56260678e-03, -4.57505463e-03,  3.84328421e-03, -1.67247851e-03,\n",
+       "        1.23591931e-03, -2.89132074e-03, -4.92465962e-03,  1.56075251e-03,\n",
+       "        3.86150088e-03, -1.12858892e-03,  3.01103736e-03,  3.27742528e-05,\n",
+       "        1.61835662e-04, -2.16657689e-04,  3.71199823e-03,  5.03032189e-03,\n",
+       "       -2.76843924e-03,  1.14906253e-03, -2.59988941e-03, -1.66411488e-03,\n",
+       "        5.11548761e-03, -2.39296793e-03, -3.95618053e-03, -5.55685814e-03,\n",
+       "       -5.02352370e-03, -2.81975023e-03,  9.23786953e-04, -2.18541827e-03,\n",
+       "       -7.52274122e-04, -5.48135070e-03,  3.04651563e-03, -1.81282894e-03,\n",
+       "        6.76631869e-04,  1.49678803e-04,  2.32552853e-03, -8.95252044e-04,\n",
+       "        9.45280990e-05,  1.71929703e-03, -2.05398700e-03, -1.71893020e-03,\n",
+       "        2.23078905e-03, -1.84505386e-03,  5.21281559e-04,  2.57136562e-04,\n",
+       "        1.63064490e-03,  2.49665929e-04,  4.85717924e-03,  1.67348608e-03,\n",
+       "        2.56082905e-03,  9.57008859e-04, -1.02496298e-03, -1.03639078e-03,\n",
+       "        1.53123785e-03, -9.98645672e-04, -3.42307868e-03,  4.02478734e-03,\n",
+       "       -1.31693122e-03,  2.17395253e-03, -3.12495953e-03,  6.14507007e-04,\n",
+       "        2.11210409e-03, -7.58875581e-03, -3.36463097e-03, -3.76612949e-03,\n",
+       "        8.81141867e-04,  6.01647829e-04, -4.34489129e-03, -4.98405844e-03,\n",
+       "        2.78118096e-04, -4.59321449e-03,  3.01631959e-03, -2.54311948e-03,\n",
+       "       -2.72717723e-03, -4.95924009e-03,  3.23187280e-03, -3.44741886e-04,\n",
+       "       -5.59586973e-04,  4.00935579e-03, -5.59571199e-03, -4.73112334e-03,\n",
+       "        6.58653502e-04,  1.05283980e-03, -1.67549634e-03, -4.06478764e-03,\n",
+       "        4.55348892e-03, -1.69134396e-03, -1.16003549e-03, -2.51196185e-03,\n",
+       "       -3.08953016e-03,  9.95131486e-05, -6.59809390e-04, -4.38965624e-03,\n",
+       "        1.31301919e-03, -1.20703678e-03,  3.62744578e-03,  3.56110948e-04,\n",
+       "       -4.08879947e-03,  7.38361198e-03, -3.78481601e-03, -2.33267900e-03,\n",
+       "       -2.40616989e-03, -1.97128463e-03,  1.65837177e-03,  1.19164388e-03,\n",
+       "       -2.15088646e-03,  2.02705758e-03, -2.16202578e-03,  4.70132055e-03,\n",
+       "        3.29381903e-03, -2.77377595e-03, -4.90364910e-04,  5.40596782e-04,\n",
+       "       -5.85301500e-03,  4.33558738e-03,  2.09719874e-03, -6.68898318e-03,\n",
+       "        4.71002469e-03,  6.49912423e-03,  6.17159647e-04,  4.72309487e-03,\n",
+       "       -1.63236586e-03, -1.00177433e-03, -2.00206880e-03,  4.67394339e-03,\n",
+       "        5.28690638e-04, -6.34086598e-03,  4.65534860e-04,  2.20853323e-03,\n",
+       "       -1.46409683e-03, -1.78817881e-03, -3.68296844e-03,  1.04393694e-03,\n",
+       "       -9.21211787e-04, -2.82574911e-03,  5.72606041e-05, -2.07991037e-03,\n",
+       "        1.47490005e-03, -8.46373849e-04, -6.12200517e-03,  1.75381021e-03,\n",
+       "        1.01003610e-03, -1.89272198e-03, -4.27281857e-03,  6.54342235e-04,\n",
+       "        1.98709522e-03, -1.60033605e-03, -3.05857137e-03, -4.36346699e-03,\n",
+       "       -2.56861048e-03, -6.33937400e-03, -5.56247658e-04,  5.50953555e-05,\n",
+       "        2.46447884e-03, -3.88809387e-03, -8.41367175e-04, -3.61045054e-03,\n",
+       "       -1.57906639e-03,  2.68903282e-03,  4.57157940e-03, -5.62511804e-03],\n",
+       "      dtype=float32)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
