updated code files

--- a/doc2vec-01-train.ipynb
+++ b/doc2vec-01-train.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# generic settings\n",
     "HOMEDIR = './'\n",
-    "CORPUS_FILE = os.path.join(HOMEDIR, \"data/train_docs.txt\")\n",
+    "CORPUS_FILE = os.path.join(HOMEDIR, \"data/corpus_train.txt\")\n",
     "\n",
     "# file names for the models we'll be creating\n",
     "MODEL_FILE_DM = os.path.join(HOMEDIR, \"models/doc2vec_DM_v20171229.bin\")\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TaggedDocument(words=['anarchism', 'is', 'a', 'political', 'philosophy', 'that', 'advocates', 'self', 'governed', 'societies', 'with', 'voluntary', 'institutions', 'these', 'are', 'often', 'described', 'as', 'stateless', 'societies', 'but', 'several', 'authors', 'have', 'defined', 'them', 'more', 'specifically', 'as', 'institutions', 'based', 'on', 'non', 'hierarchical', 'free', 'associations', 'anarchism', 'holds', 'the', 'state', 'to', 'be', 'undesirable', 'unnecessary', 'or', 'harmful', 'while', 'anti', 'statism', 'is', 'central', 'anarchism', 'entails', 'opposing', 'authority', 'or', 'hierarchical', 'organisation', 'in', 'the', 'conduct', 'of', 'human', 'relations', 'including', 'but', 'not', 'limited', 'to', 'the', 'state', 'system'], tags=[0])"
+       "TaggedDocument(words=['どうかを見極めましょう', 'なるべく新しい情報を集める', '情報は日々更新されています', '特にイ'], tags=[0])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "solution": "shown",
     "solution2": "hidden",
@@ -201,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "# solution\n",
+    "# solution *This is code of an older version. do not run*\n",
     "model_dbow = doc2vec.Doc2Vec(docs, \n",
     "                            size=200, # vector size, should be the same size as pre-trained embedding size when not using dm_concat\n",
     "                            window=10, # window size for word context, on each side\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -273,32 +273,26 @@
      "output_type": "stream",
      "text": [
       "[Original document]\n",
-      "[Doc 200]: single scattering albedo is used to define scattering of electromagnetic waves on small particles it depends on properties of the material lrb refractive index rrb the size of the particle or particles and the wavelength of the incoming radiation\n",
+      "[Doc 200]: 体的な対策案を詳しく解説します html を定期的に変更する サイトの html を定期的に変更す\n",
       "\n",
-      "[Most similar documents]\n"
+      "[Most similar documents]\n",
+      "-----------------\n",
+      "similarity: 0.976435661315918\n",
+      "[Doc 7319]: サイトの html が書き換えられても web スクレイピングできる web スクレイピングで取得\n",
+      "-----------------\n",
+      "similarity: 0.9718865156173706\n",
+      "[Doc 15348]: 穴が空いてしまった 残念ながら サイトの html 構造の\n",
+      "-----------------\n",
+      "similarity: 0.9671600461006165\n",
+      "[Doc 7341]: web サイトの html が書き換えられ\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\uSER\\AppData\\Local\\Temp\\ipykernel_34220\\2777213050.py:12: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+      "C:\\Users\\uSER\\AppData\\Local\\Temp\\ipykernel_45768\\2777213050.py:12: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
       "  for doc_id, similarity in model.docvecs.most_similar(ref_doc_id, topn=3):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------\n",
-      "similarity: 0.818175196647644\n",
-      "[Doc 165]: the overall albedo of the moon is around but it is strongly directional and non lambertian displaying also a strong opposition effect although such reflectance properties are different from those of any terrestrial terrains they are typical of the regolith surfaces of airless solar system bodies\n",
-      "-----------------\n",
-      "similarity: 0.811142086982727\n",
-      "[Doc 148]: albedo lrb rrb or reflection coefficient derived from latin albedo whiteness lrb or reflected sunlight rrb in turn from albus white is the diffuse reflectivity or reflecting power of a surface\n",
-      "-----------------\n",
-      "similarity: 0.8111039996147156\n",
-      "[Doc 162]: astronomical albedo\n"
      ]
     }
    ],
@@ -315,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_file = os.path.join(HOMEDIR, \"data/test_docs.txt\")"
+    "test_data_file = os.path.join(HOMEDIR, \"data/corpus_total.txt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,66 +360,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.58632842e-03,  3.63510568e-03, -1.21472322e-03, -1.15607830e-03,\n",
-       "        7.26221242e-06,  1.88632961e-03, -1.15984026e-03,  2.83681066e-03,\n",
-       "        2.13623280e-03, -1.63606170e-03,  6.09889627e-04, -9.48709494e-05,\n",
-       "       -2.53189425e-03,  2.51582661e-03, -1.72592211e-03, -4.17035818e-03,\n",
-       "        7.85952667e-04, -7.88370598e-05,  3.83347913e-04, -1.40118389e-03,\n",
-       "        2.93286459e-04,  3.21178860e-03,  1.74682192e-03, -4.14444925e-03,\n",
-       "       -1.47055055e-03, -2.33964832e-03,  1.89658953e-03, -1.56889553e-03,\n",
-       "        1.53461634e-03, -1.19663282e-05, -5.22329099e-03,  2.03342712e-03,\n",
-       "        2.00471375e-03, -8.12001061e-03,  1.19660384e-04, -3.38673429e-03,\n",
-       "        1.12576061e-03, -5.53413620e-03, -4.18214547e-03, -3.31581896e-03,\n",
-       "        1.56260678e-03, -4.57505463e-03,  3.84328421e-03, -1.67247851e-03,\n",
-       "        1.23591931e-03, -2.89132074e-03, -4.92465962e-03,  1.56075251e-03,\n",
-       "        3.86150088e-03, -1.12858892e-03,  3.01103736e-03,  3.27742528e-05,\n",
-       "        1.61835662e-04, -2.16657689e-04,  3.71199823e-03,  5.03032189e-03,\n",
-       "       -2.76843924e-03,  1.14906253e-03, -2.59988941e-03, -1.66411488e-03,\n",
-       "        5.11548761e-03, -2.39296793e-03, -3.95618053e-03, -5.55685814e-03,\n",
-       "       -5.02352370e-03, -2.81975023e-03,  9.23786953e-04, -2.18541827e-03,\n",
-       "       -7.52274122e-04, -5.48135070e-03,  3.04651563e-03, -1.81282894e-03,\n",
-       "        6.76631869e-04,  1.49678803e-04,  2.32552853e-03, -8.95252044e-04,\n",
-       "        9.45280990e-05,  1.71929703e-03, -2.05398700e-03, -1.71893020e-03,\n",
-       "        2.23078905e-03, -1.84505386e-03,  5.21281559e-04,  2.57136562e-04,\n",
-       "        1.63064490e-03,  2.49665929e-04,  4.85717924e-03,  1.67348608e-03,\n",
-       "        2.56082905e-03,  9.57008859e-04, -1.02496298e-03, -1.03639078e-03,\n",
-       "        1.53123785e-03, -9.98645672e-04, -3.42307868e-03,  4.02478734e-03,\n",
-       "       -1.31693122e-03,  2.17395253e-03, -3.12495953e-03,  6.14507007e-04,\n",
-       "        2.11210409e-03, -7.58875581e-03, -3.36463097e-03, -3.76612949e-03,\n",
-       "        8.81141867e-04,  6.01647829e-04, -4.34489129e-03, -4.98405844e-03,\n",
-       "        2.78118096e-04, -4.59321449e-03,  3.01631959e-03, -2.54311948e-03,\n",
-       "       -2.72717723e-03, -4.95924009e-03,  3.23187280e-03, -3.44741886e-04,\n",
-       "       -5.59586973e-04,  4.00935579e-03, -5.59571199e-03, -4.73112334e-03,\n",
-       "        6.58653502e-04,  1.05283980e-03, -1.67549634e-03, -4.06478764e-03,\n",
-       "        4.55348892e-03, -1.69134396e-03, -1.16003549e-03, -2.51196185e-03,\n",
-       "       -3.08953016e-03,  9.95131486e-05, -6.59809390e-04, -4.38965624e-03,\n",
-       "        1.31301919e-03, -1.20703678e-03,  3.62744578e-03,  3.56110948e-04,\n",
-       "       -4.08879947e-03,  7.38361198e-03, -3.78481601e-03, -2.33267900e-03,\n",
-       "       -2.40616989e-03, -1.97128463e-03,  1.65837177e-03,  1.19164388e-03,\n",
-       "       -2.15088646e-03,  2.02705758e-03, -2.16202578e-03,  4.70132055e-03,\n",
-       "        3.29381903e-03, -2.77377595e-03, -4.90364910e-04,  5.40596782e-04,\n",
-       "       -5.85301500e-03,  4.33558738e-03,  2.09719874e-03, -6.68898318e-03,\n",
-       "        4.71002469e-03,  6.49912423e-03,  6.17159647e-04,  4.72309487e-03,\n",
-       "       -1.63236586e-03, -1.00177433e-03, -2.00206880e-03,  4.67394339e-03,\n",
-       "        5.28690638e-04, -6.34086598e-03,  4.65534860e-04,  2.20853323e-03,\n",
-       "       -1.46409683e-03, -1.78817881e-03, -3.68296844e-03,  1.04393694e-03,\n",
-       "       -9.21211787e-04, -2.82574911e-03,  5.72606041e-05, -2.07991037e-03,\n",
-       "        1.47490005e-03, -8.46373849e-04, -6.12200517e-03,  1.75381021e-03,\n",
-       "        1.01003610e-03, -1.89272198e-03, -4.27281857e-03,  6.54342235e-04,\n",
-       "        1.98709522e-03, -1.60033605e-03, -3.05857137e-03, -4.36346699e-03,\n",
-       "       -2.56861048e-03, -6.33937400e-03, -5.56247658e-04,  5.50953555e-05,\n",
-       "        2.46447884e-03, -3.88809387e-03, -8.41367175e-04, -3.61045054e-03,\n",
-       "       -1.57906639e-03,  2.68903282e-03,  4.57157940e-03, -5.62511804e-03],\n",
+       "array([ 2.1745462e-03, -1.3884333e-03, -2.1389707e-03,  2.7547378e-04,\n",
+       "       -1.6884271e-03,  9.8828354e-04,  2.6889006e-03,  1.8476255e-03,\n",
+       "        9.7175839e-04, -1.4412728e-03,  1.1199429e-03,  5.7260576e-04,\n",
+       "        2.0723555e-03,  1.4076020e-03,  1.6640181e-03,  3.1390295e-03,\n",
+       "       -1.1036033e-03, -1.6768518e-03, -2.2916360e-04, -1.3597443e-04,\n",
+       "        1.2440752e-04, -1.3818053e-03,  1.0196362e-03,  1.6079628e-03,\n",
+       "        3.5036361e-04,  8.6599769e-04,  2.1145046e-03, -1.8057314e-03,\n",
+       "       -1.4154599e-03,  2.8959394e-04, -3.2196488e-04,  3.0237322e-03,\n",
+       "        1.6618476e-03,  9.0015819e-05,  1.7056705e-03, -1.3774577e-04,\n",
+       "        1.0094722e-03, -1.5144229e-04,  2.0610006e-03, -3.4465315e-03,\n",
+       "        1.3685275e-03, -2.2041015e-03,  1.0888297e-03, -7.2553717e-05,\n",
+       "       -1.0431758e-03, -2.8383040e-03,  8.6026359e-04, -3.1328239e-03,\n",
+       "        6.2263738e-05,  1.2314832e-03, -4.3906824e-04, -2.2127018e-03,\n",
+       "        2.0221604e-03,  1.3907196e-03,  1.8366361e-03, -4.3923350e-04,\n",
+       "       -4.8335514e-05, -1.6069515e-03, -5.3927518e-04, -1.5378627e-03,\n",
+       "       -3.1347240e-03,  2.9386124e-03,  2.7966115e-03, -6.7924999e-04,\n",
+       "        3.6804267e-04,  2.4243966e-03, -1.2150637e-03,  3.2884395e-03,\n",
+       "       -5.0249870e-04, -1.9125844e-03,  3.7249480e-04,  2.9721227e-04,\n",
+       "        1.5317439e-03, -2.4825493e-03,  3.4674545e-04,  1.0726803e-03,\n",
+       "       -2.1986666e-04,  2.4930434e-03,  8.9033181e-04, -2.3531490e-03,\n",
+       "       -1.6957404e-03,  6.3793070e-04, -6.2556943e-04, -4.4779730e-04,\n",
+       "       -8.2551345e-04,  1.3624755e-04, -7.2458461e-05, -1.3135289e-03,\n",
+       "       -2.9169911e-05, -1.2219789e-03, -2.8792375e-03,  1.5854050e-03,\n",
+       "        5.3559593e-04,  1.2556369e-03,  1.3066527e-03,  4.9422683e-06,\n",
+       "        2.1133975e-03,  1.4219935e-03,  6.1187777e-05,  2.2588097e-03,\n",
+       "       -7.6093688e-04,  1.5211591e-03, -2.4311000e-03, -1.0677640e-03,\n",
+       "        1.3336124e-03,  2.1576656e-03,  1.4802595e-03, -1.0135075e-03,\n",
+       "        8.8580500e-04,  2.3731149e-03,  1.6734193e-03, -8.4165961e-04,\n",
+       "        3.9965508e-04, -6.7841471e-04, -3.1043824e-03, -6.4612314e-04,\n",
+       "        5.0791173e-04, -1.6828618e-04,  1.4906556e-04,  1.1947833e-03,\n",
+       "        3.8198696e-04,  1.9975204e-04, -2.4821686e-03, -5.4921507e-05,\n",
+       "       -1.3270692e-03, -6.5189571e-04, -1.7742938e-03, -4.1653364e-04,\n",
+       "       -6.1153434e-04,  6.8496022e-04, -2.0361331e-04, -1.6520683e-03,\n",
+       "       -1.8634916e-03,  3.1357422e-03, -9.5795869e-04, -5.4961524e-04,\n",
+       "        4.5128012e-04,  1.8969490e-03,  1.4817821e-03,  3.0637221e-04,\n",
+       "       -3.5292646e-04,  2.0056435e-04,  2.2407968e-03,  3.0850811e-04,\n",
+       "       -3.6180380e-03,  1.3524919e-03,  2.2973989e-03, -1.6155399e-03,\n",
+       "        9.5279596e-04,  1.9267426e-03,  3.9883735e-04,  3.5605812e-04,\n",
+       "       -1.3906231e-04,  1.2116130e-03, -2.5143567e-03, -1.7469954e-03,\n",
+       "        2.0206957e-03,  4.1005950e-04, -3.3364536e-03,  1.8393692e-03,\n",
+       "        2.7012322e-03, -1.1704335e-03, -1.1212071e-03,  2.1009794e-03,\n",
+       "       -1.4847933e-03, -9.2093885e-04, -1.7333154e-03,  2.5962768e-03,\n",
+       "        1.0966787e-03, -1.5388117e-03, -1.4209682e-03, -6.3400058e-04,\n",
+       "       -8.5797132e-04, -2.8936369e-03, -1.5895333e-03,  1.0294196e-03,\n",
+       "       -1.3876983e-03, -2.2572551e-04,  9.0081239e-04, -2.9099532e-03,\n",
+       "       -1.9189687e-03,  1.3740973e-03, -1.6422390e-03,  6.7277302e-05,\n",
+       "        2.9758469e-03, -6.3335814e-04,  9.5959590e-04,  2.1415215e-05,\n",
+       "       -2.0840310e-03, -4.9717765e-04, -2.1881843e-03, -1.3785674e-03,\n",
+       "        8.4288965e-04, -7.4175437e-04,  6.5144768e-04, -1.7531742e-03,\n",
+       "        2.3250764e-03, -3.4784134e-03, -9.4739815e-05,  1.7191347e-03],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
