--- a/doc2vec-02-topics.ipynb
+++ b/doc2vec-02-topics.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CORPUS_FILE = os.path.join(HOMEDIR, \"data/train_docs.txt\")\n",
+    "CORPUS_FILE = os.path.join(HOMEDIR, \"data/corpus_train.txt\")\n",
     "MODEL_FILE_DM = os.path.join(HOMEDIR, \"models/doc2vec_DM_v20171229.bin\")\n",
     "MODEL_FILE_DBOW = os.path.join(HOMEDIR, \"models/doc2vec_DBOW_v20171229.bin\")\n",
     "\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +110,7 @@
     }
    ],
    "source": [
+    "# *DO NOT RUN*\n",
     "from gensim.utils import delete_temporary_training_data\n",
     "\n",
     "model = doc2vec.Doc2Vec.load(MODEL_FILE_DM)  # Load pre-trained model\n",
@@ -120,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\uSER\\AppData\\Local\\Temp\\ipykernel_51288\\3892327324.py:9: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+      "C:\\Users\\uSER\\AppData\\Local\\Temp\\ipykernel_49412\\3892327324.py:9: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
       "  model.docvecs = KeyedVectors(vector_size=model.vector_size)\n"
      ]
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {
     "solution": "shown",
     "solution2": "hidden"
@@ -204,11 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# infer document vectors\n",
+    "infer_epochs = 1000\n",
     "docvecs = [model.infer_vector(d, alpha=0.01, epochs=infer_epochs) for d in docs]\n"
    ]
   },
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,35 +241,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({14: 52,\n",
-       "         9: 54,\n",
-       "         0: 54,\n",
-       "         16: 55,\n",
-       "         3: 44,\n",
-       "         13: 15,\n",
-       "         6: 66,\n",
-       "         17: 34,\n",
-       "         2: 7,\n",
-       "         18: 53,\n",
-       "         5: 35,\n",
-       "         7: 55,\n",
-       "         10: 51,\n",
-       "         8: 103,\n",
-       "         4: 55,\n",
-       "         19: 45,\n",
-       "         1: 56,\n",
-       "         12: 65,\n",
-       "         15: 43,\n",
-       "         11: 58})"
+       "Counter({9: 976,\n",
+       "         7: 5515,\n",
+       "         5: 884,\n",
+       "         18: 1849,\n",
+       "         13: 6582,\n",
+       "         12: 1555,\n",
+       "         3: 1877,\n",
+       "         15: 1278,\n",
+       "         11: 1896,\n",
+       "         14: 2085,\n",
+       "         0: 1189,\n",
+       "         16: 946,\n",
+       "         8: 1860,\n",
+       "         17: 1757,\n",
+       "         6: 812,\n",
+       "         1: 669,\n",
+       "         2: 1680,\n",
+       "         10: 1549,\n",
+       "         19: 1152,\n",
+       "         4: 851})"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -365,10 +367,10 @@
     {
      "data": {
       "text/plain": [
-       "(1000, 2)"
+       "(36962, 2)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
